<resources>
    <string name="app_name">MobileBanking</string>
    <string name="loginPage_login">Login</string>
    <string name="navLabel_history">History</string>
    <string name="navLabel_payBills">Pay Bills</string>
    <string name="navLabel_fund_transfer">Fund Transfer</string>
    <string name="navLabel_live_chat">Live Chat</string>
    <string name="navLabel_home">Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_welcome_user">Welcome %1$s</string>
    <string name="home_account_number">Account Number : %1$s</string>
    <string name="home_balance">Balance : RM %1$.02f</string>
    <string name="history_account_number">Account Number : %1$s</string>
    <string name="transfer2_transferring_to">Transferring to \n%1$s \n(%2$s)</string>
    <string name="transfer2_current_balance">Current balance : RM %1$.02f</string>
    <string name="transfer3_transfer_success">Successfully transferred \nRM %1$.02f \nto \n%2$s</string>
    <string name="transfer3_transfer_fail">Failed to transfer \nRM %1$.02f \nto \n%2$s</string>
    <string name="PDFTEMPLATE_date">Transaction Date\t: %1$s</string>
    <string name="PDFTEMPLATE_sender">Sender account\t: %1$s</string>
    <string name="PDFTEMPLATE_receiver">Receiver account\t: %1$s</string>
    <string name="PDFTEMPLATE_amount">Amount\t\t\t: RM%1$.02f</string>
</resources>